# project-chimera-factory

./: .gitignore  Dockerfile  Makefile  mcp.json  pyproject.toml  readme.md
.cursor/: rules.md
.github/workflows/: main.yml
research/: architecture_strategy.md  notes.md  tooling_strategy.md
skills/: README.md
specs/: _meta.md  acceptance_criteria.md  functional.md  openclaw_integraion.md  security.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
